# piejam

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CTestCustom.cmake.in  README.md
piejam_app/: CMakeLists.txt  main.cpp
piejam_app/resources/: Main.qml  piejam_app_resources.qrc
piejam_app/src/: main.cpp
piejam_libs/: CMakeLists.txt
piejam_libs/algorithm/: CMakeLists.txt
piejam_libs/algorithm/tests/: CMakeLists.txt  all_of_adjacent_test.cpp  contains_test.cpp  edit_script_test.cpp  escape_html_test.cpp  find_or_get_first_test.cpp  for_each_adjacent_test.cpp  index_of_test.cpp  shift_push_back_test.cpp  transform_to_vector_test.cpp
piejam_libs/audio/: CMakeLists.txt
piejam_libs/audio/benchmarks/: CMakeLists.txt  amplify_processor_benchmark.cpp  mix_benchmark.cpp  mix_processor_benchmark.cpp  multiply_processor_benchmark.cpp  peak_level_meter_benchmark.cpp  pitch_yin_benchmark.cpp  rms_benchmark.cpp  rms_level_meter_benchmark.cpp
piejam_libs/audio/test/: CMakeLists.txt  pan_test.cpp  pcm_convert_test.cpp  smoother_test.cpp
piejam_libs/audio/tests/: CMakeLists.txt  amplify_processor_test.cpp  audio_spsc_ring_buffer_test.cpp  audio_stream_buffer_test.cpp  channel_strip_processor_test.cpp  clip_processor_test.cpp  component_mock.h  dag_test.cpp  device_test.cpp  dsp_pitch_yin_test.cpp  dsp_rms_test.cpp  event_buffer_memory_test.cpp  event_buffer_test.cpp  event_converter_processor_test.cpp  event_identity_processor_test.cpp  event_input_buffers_test.cpp  event_output_buffers_test.cpp  event_test.cpp  event_to_audio_processor_test.cpp  fake_processor.h  frame_iterator_test.cpp  generate_sine.h  graph_algorithms_test.cpp  graph_test.cpp  graph_to_dag_test.cpp  gui_input_processor_test.cpp  identity_processor_test.cpp  input_processor_test.cpp  interleaved_vector_test.cpp  interleaved_view_test.cpp  io_process_test.cpp  level_meter_processor_test.cpp  level_meter_test.cpp  lockstep_events_test.cpp  mipp_iterator_test.cpp  mix_processor_test.cpp  mixer_bus_processor_test.cpp  multichannel_buffer_test.cpp  multiply_processor_test.cpp  output_processor_test.cpp  (+18 more)
piejam_libs/base/: CMakeLists.txt
piejam_libs/base/tests/: CMakeLists.txt  box_test.cpp  boxify_result_test.cpp  decay_tuple_elements_test.cpp  entity_data_map_test.cpp  entity_map_test.cpp  indexed_access_test.cpp  math_test.cpp  tuple_test.cpp  type_traits_test.cpp
piejam_libs/container/: CMakeLists.txt
piejam_libs/container/test/: CMakeLists.txt  box_test.cpp  boxify_result_test.cpp
piejam_libs/container/tests/: CMakeLists.txt  box_test.cpp  table_test.cpp
piejam_libs/functional/: CMakeLists.txt
piejam_libs/functional/test/: CMakeLists.txt
piejam_libs/functional/tests/: CMakeLists.txt  compare_test.cpp  deref_test.cpp  get_if_test.cpp  get_test.cpp  memo_test.cpp  operators_test.cpp  partial_compare_test.cpp
piejam_libs/fx_modules/: CMakeLists.txt
piejam_libs/fx_modules/resources/: piejam_fx_modules_resources.qrc
piejam_libs/gui/: CMakeLists.txt
piejam_libs/gui/resources/: Main.qml  piejam_gui_resources.qrc  qtquickcontrols2.conf
piejam_libs/gui/tests/: CMakeLists.txt  DbScaleData_test.cpp
piejam_libs/io/: CMakeLists.txt
piejam_libs/ladspa/: CMakeLists.txt
piejam_libs/log/: CMakeLists.txt
piejam_libs/meta/: CMakeLists.txt
piejam_libs/meta/test/: CMakeLists.txt  decay_tuple_elements_test.cpp
piejam_libs/meta/tests/: CMakeLists.txt  type_traits_test.cpp
piejam_libs/midi/: CMakeLists.txt
piejam_libs/numeric/: CMakeLists.txt
piejam_libs/numeric/test/: bitops_test.cpp  intops_test.cpp
piejam_libs/numeric/tests/: CMakeLists.txt  bit_test.cpp  bitops_test.cpp  intops_test.cpp  mipp_iterator_test.cpp
piejam_libs/range/: CMakeLists.txt
piejam_libs/range/test/: CMakeLists.txt  strided_span_test.cpp  table_view_test.cpp
piejam_libs/range/tests/: CMakeLists.txt  frame_iterator_test.cpp  indices_test.cpp  interleaved_vector_test.cpp  interleaved_view_test.cpp  span_iterator_test.cpp  stride_iterator_test.cpp  stride_pointer_iterator_test.cpp  strided_span_test.cpp  table_view_test.cpp  zip_test.cpp
piejam_libs/redux/: CMakeLists.txt
piejam_libs/redux/test/: CMakeLists.txt
piejam_libs/redux/tests/: CMakeLists.txt  batch_middleware_test.cpp  flag_resetter_test.cpp  queueing_middleware_test.cpp  selector_test.cpp  store_test.cpp  subscriber_test.cpp  subscriptions_manager_test.cpp  thread_delegate_middleware_test.cpp  thunk_middleware_test.cpp
piejam_libs/reselect/: CMakeLists.txt
piejam_libs/reselect/test/: subscriber_test.cpp
piejam_libs/reselect/tests/: CMakeLists.txt  selector_test.cpp  subscriber_test.cpp  subscriptions_manager_test.cpp
piejam_libs/runtime/: CMakeLists.txt
piejam_libs/runtime/benchmarks/: CMakeLists.txt  mixer_state_benchmark.cpp  state_benchmark.cpp
piejam_libs/runtime/test/: CMakeLists.txt  audio_middleware_test.cpp
piejam_libs/runtime/tests/: CMakeLists.txt  audio_device_manager_mock.h  audio_engine_middleware_test.cpp  audio_engine_render_test.cpp  audio_middleware_test.cpp  dynamic_key_object_map_test.cpp  dynamic_key_shared_object_map_test.cpp  fx_parameter_id_test.cpp  ladspa_fx_control_mock.h  ladspa_fx_middleware_test.cpp  ladspa_instance_manager_mock.h  ladspa_processor_factory_mock.h  middleware_functors_mock.h  midi_assignment_processor_test.cpp  midi_control_middleware_test.cpp  midi_input_controller_mock.h  midi_input_processor_test.cpp  midi_learn_processor_test.cpp  midi_to_parameter_processor_test.cpp  mixer_bus_processor_test.cpp  mixer_test.cpp  mute_solo_processor_test.cpp  parameter_map_test.cpp  parameter_processor_factory_test.cpp  sound_card_manager_mock.h  state_test.cpp  stream_processor_factory_test.cpp
piejam_libs/system/: CMakeLists.txt
piejam_libs/system/tests/: CMakeLists.txt  dll_test.cpp  test_dll.c
piejam_libs/thread/: CMakeLists.txt
piejam_libs/thread/tests/: CMakeLists.txt  (+3 more)
piejam_setup/: CMakeLists.txt  MainModel.cpp  MainModel.h  Task.h  TaskList.h  main.cpp
piejam_setup/resources/: Main.qml  boot_logo.png.license  piejam_setup_resources.qrc
(+1216 files in other folders)
