add_subdirectory(algorithm)
add_subdirectory(audio)
add_subdirectory(base)
add_subdirectory(container)
add_subdirectory(functional)
add_subdirectory(gui)
add_subdirectory(system)
add_subdirectory(log)
add_subdirectory(numeric)
add_subdirectory(range)
add_subdirectory(redux)
add_subdirectory(reselect)
add_subdirectory(runtime)
add_subdirectory(thread)

set(PIEJAM_QML_IMPORT_PATHS ${PIEJAM_QML_IMPORT_PATHS} PARENT_SCOPE)
