# SPDX-FileCopyrightText: 2020 Dimitrij Kotrev
#
# SPDX-License-Identifier: CC0-1.0

add_library(piejam_audio STATIC
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/components/amplifier.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/components/identity.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/components/level_meter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/components/pan_balance.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/components/remap_channels.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/cpu_load_meter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/device.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/device_manager.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/dsp/biquad.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/dsp/biquad_filter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/dsp/envelope_follower.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/audio_slice.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/audio_spsc_ring_buffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/clip_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/component.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/dag.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/dag_executor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/endpoint_ports.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/event.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/event_buffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/event_buffer_memory.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/event_converter_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/event_identity_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/event_port.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/graph.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/graph_algorithms.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/graph_endpoint.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/graph_generic_algorithms.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/graph_node.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/graph_to_dag.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/identity_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/input_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/level_meter_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/lockstep_events.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/mix_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/multiply_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/named_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/output_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/pan_balance_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/process.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/processor_job.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/processor_util.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/processor_test_environment.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/single_event_input_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/slice.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/slice_algorithms.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/smoother_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/stream_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/thread_context.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/value_io_processor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/engine/verify_process_context.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/fwd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/interleaved_vector.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/interleaved_view.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/level_meter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/level_peak_meter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/multichannel_buffer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/multichannel_layout.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/multichannel_view.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pair.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pan.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_buffer_converter.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_convert.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_descriptor.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_format.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_hw_params.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_io_config.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/pcm_sample_type.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/period_count.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/period_size.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/process_function.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/process_thread.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/sample_rate.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/simd.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/smoother.h
    ${CMAKE_CURRENT_SOURCE_DIR}/include/piejam/audio/types.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/get_pcm_io_descriptors.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/get_pcm_io_descriptors.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/get_set_hw_params.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/get_set_hw_params.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/pcm_io.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/pcm_io.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/pcm_reader.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/pcm_writer.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/process_step.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/alsa/process_step.h
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/components/amplifier.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/components/identity.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/components/level_meter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/components/pan_balance.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/cpu_load_meter.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/device.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/device_manager.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/audio_slice.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/clip_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/dag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/export_graph_as_dot.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/graph.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/graph_algorithms.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/graph_to_dag.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/identity_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/input_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/level_meter_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/mix_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/multiply_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/output_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/pan_balance_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/process.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/processor_job.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/smoother_processor.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/src/piejam/audio/engine/stream_processor.cpp
)

target_compile_options(piejam_audio PRIVATE -Wall -Wextra -Werror -pedantic-errors)
target_include_directories(piejam_audio
    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
target_link_libraries(piejam_audio
    INTERFACE mipp)
target_link_libraries(piejam_audio
    PUBLIC piejam_algorithm piejam_functional piejam_system piejam_numeric piejam_thread mipp
    PRIVATE fmt spdlog::spdlog piejam_range)

add_subdirectory(benchmarks)
add_subdirectory(tests)
